# Big-BWT

./: CMakeLists.txt  bigbwt  bwtparse.c  f2s.py  gsacak.c  gsacak.h  hash.h  hash.hpp  makefile  newscan.cpp  newscan.hpp  parse.cpp  parse.hpp  pfbwt.cpp  pfbwt.hpp  pfbwt.py  pfbwt_new.cpp  pfthreads.hpp  pscan.cpp  pscan.hpp  readme.md  simplebwt.c  simplebwt_fasta.c  unparse.c  utils.c  utils.h
rollinghashcpp/: example  example2  example3  example4  example5  example6  example64bits  speedtesting  unit
